# denoise-pcap

./: README.org  conftest.py  flake.nix  pyproject.toml  pytest.ini
denoise_pcap/: __init__.py  __main__.hy  main.hy
nix/: default.nix
nix/tests/: icmp-unreachable.nix  nmap-scan.nix  ntp-repetitive.nix  ssh-bruteforce.nix
test/: helper.hy  pcap_datatransfer_with_rst.hy  pcap_ntp_attack.hy  pcap_simple_syn.hy  pcap_simple_udp.hy  split.hy  test_datatransfer_with_rst.golden.yml  test_filtering.hy  test_ntp_attack.golden.yml  test_simple_syn.golden.yml  test_simple_udp.golden.yml
